src/kubernetes/events-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
  namespace: cinemaabyss
  labels:
    app: events-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: events-service
  template:
    metadata:
      labels:
        app: events-service
    spec:
      imagePullSecrets:
      - name: dockerconfigjson-github
      containers:
      - name: events-service
        image: ghcr.io/den111222/architecture-pro-cinemaabyss/events-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        livenessProbe:
          httpGet:
            path: /api/events/health
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/events/health
            port: 8082
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: events-service
  namespace: cinemaabyss
spec:
  selector:
    app: events-service
  ports:
  - port: 8082
    targetPort: 8082
    name: http
  type: ClusterIP
